--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "priyanxhu",
+  "name": "priyanshu-portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.2.1",
+    "@prisma/client": "^6.3.1",
     "axios": "^1.7.9",
-    "next": "15.1.4",
-    "prisma": "^6.2.1",
+    "next": "15.1.7",
+    "prisma": "^6.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0"
@@ -22,7 +21,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.0",
     "eslint": "^9",
-    "eslint-config-next": "15.1.4",
+    "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "tailwindcss": "^4.0.0"
   }
