--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prisma": "^6.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-github-calendar": "^4.5.5",
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
