--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "priyanshu-portfolio",
+  "name": "portfolio1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.4.1",
-    "axios": "^1.7.9",
-    "next": "15.2.0",
-    "prisma": "^6.4.1",
+    "@prisma/client": "^6.5.0",
+    "next": "15.2.2",
+    "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-github-calendar": "^4.5.5",
-    "react-icons": "^5.4.0"
+    "react-github-calendar": "^4.5.6",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "postcss": "^8"
+    "eslint-config-next": "15.2.2",
+    "@eslint/eslintrc": "^3"
   }
 }
