--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "priyanxhu",
+  "name": "portfolio-v1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.5.0",
-    "next": "15.2.2",
-    "prisma": "^6.5.0",
+    "@prisma/client": "^6.6.0",
+    "@tanstack/react-query": "^5.73.3",
+    "next": "15.3.0",
+    "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-github-calendar": "^4.5.6",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
@@ -26,7 +25,7 @@
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.2.2",
+    "eslint-config-next": "15.3.0",
     "@eslint/eslintrc": "^3"
   }
 }
