--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^6.8.2",
     "@tanstack/react-query": "^5.76.1",
+    "framer-motion": "^12.16.0",
     "next": "15.3.0",
     "prisma": "^6.8.2",
     "react": "^19.1.0",
@@ -19,15 +20,15 @@
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "typescript": "^5.8.3",
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.7",
     "@types/node": "^20.17.50",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
-    "@tailwindcss/postcss": "^4.1.7",
-    "tailwindcss": "^4.1.7",
     "eslint": "^9.27.0",
     "eslint-config-next": "15.3.0",
-    "@eslint/eslintrc": "^3.3.1"
+    "tailwindcss": "^4.1.7",
+    "typescript": "^5.8.3"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
