--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.76.1",
     "framer-motion": "^12.16.0",
     "next": "15.3.0",
+    "next-themes": "^0.4.6",
     "prisma": "^6.8.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
