--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-v1",
+  "name": "priyanxhu",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,26 +10,25 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^6.8.2",
-    "@tanstack/react-query": "^5.76.1",
+    "@prisma/client": "^6.9.0",
+    "@tanstack/react-query": "^5.80.6",
     "framer-motion": "^12.16.0",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
-    "prisma": "^6.8.2",
+    "prisma": "^6.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.7",
-    "@types/node": "^20.17.50",
-    "@types/react": "^19.1.4",
-    "@types/react-dom": "^19.1.5",
-    "eslint": "^9.27.0",
+    "@tailwindcss/postcss": "^4.1.8",
+    "@types/node": "^20.19.0",
+    "@types/react": "^19.1.7",
+    "@types/react-dom": "^19.1.6",
+    "eslint": "^9.28.0",
     "eslint-config-next": "15.3.0",
-    "tailwindcss": "^4.1.7",
+    "tailwindcss": "^4.1.8",
     "typescript": "^5.8.3"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  }
 }
