--- a/package.json
+++ b/package.json
@@ -10,25 +10,23 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^6.9.0",
-    "@tanstack/react-query": "^5.80.6",
-    "next": "15.3.0",
-    "next-themes": "^0.4.6",
-    "prisma": "^6.9.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "react-intersection-observer": "^9.16.0"
+    "@prisma/client": "^6.12.0",
+    "@tanstack/react-query": "^5.83.0",
+    "next": "15.4.2",
+    "prisma": "^6.12.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.8",
-    "@types/node": "^20.19.0",
-    "@types/react": "^19.1.7",
-    "@types/react-dom": "^19.1.6",
-    "eslint": "^9.28.0",
-    "eslint-config-next": "15.3.0",
-    "tailwindcss": "^4.1.8",
-    "typescript": "^5.8.3"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
+    "eslint": "^9",
+    "eslint-config-next": "15.4.2",
+    "@eslint/eslintrc": "^3"
   }
 }
