--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
-    "@tanstack/react-query": "^5.83.0",
     "next": "15.4.2",
     "prisma": "^6.12.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "typescript": "^5",
