--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "@vercel/analytics": "^1.5.0",
     "highlight.js": "^11.11.1",
     "next": "15.4.2",
     "prisma": "^6.12.0",
