--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^6.16.2",
+    "@prisma/client": "^6.16.3",
     "@vercel/analytics": "^1.5.0",
     "next": "15.4.2",
-    "prisma": "^6.16.2",
+    "next-themes": "^0.4.6",
+    "prisma": "^6.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "typescript": "^5.9.2",
-    "@types/node": "^20.19.18",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@tailwindcss/postcss": "^4.1.13",
-    "tailwindcss": "^4.1.13",
-    "eslint": "^9.36.0",
+    "typescript": "^5.9.3",
+    "@types/node": "^20.19.19",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "@tailwindcss/postcss": "^4.1.14",
+    "tailwindcss": "^4.1.14",
+    "eslint": "^9.37.0",
     "eslint-config-next": "15.4.2",
     "@eslint/eslintrc": "^3.3.1"
   }
