--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "@prisma/client": "^6.16.3",
     "@vercel/analytics": "^1.5.0",
-    "next": "15.4.2",
+    "next": "^16.0.1",
     "next-themes": "^0.4.6",
     "prisma": "^6.16.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
