--- a/apps/blogs/package.json
+++ b/apps/blogs/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "highlight.js": "^11.11.1",
-    "next": "16.0.8",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "next": "^16.0.10",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "rehype-highlight": "^7.0.2",
