--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "priyanxhu",
-  "private": true,
-  "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
-  },
-  "devDependencies": {
-    "prettier": "^3.7.4",
-    "turbo": "^2.6.3",
-    "typescript": "5.9.2"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "packageManager": "bun@1.3.3",
-  "workspaces": [
-    "apps/*"
-  ]
+	"name": "priyanxhu",
+	"private": true,
+	"scripts": {
+		"build": "turbo run build",
+		"dev": "turbo run dev",
+		"lint": "turbo run lint",
+		"check-types": "turbo run check-types",
+		"biome:check": "biome check --write .",
+		"biome:format": "biome format --write .",
+		"biome:lint": "biome lint ."
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.3.10",
+		"turbo": "^2.6.3",
+		"typescript": "5.9.2"
+	},
+	"engines": {
+		"node": ">=18"
+	},
+	"packageManager": "bun@1.3.3",
+	"workspaces": [
+		"apps/*"
+	]
 }
