--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -1,35 +1,27 @@
 {
-	"name": "portfolio",
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev --port 3000",
-		"build": "vite build",
-		"preview": "vite preview",
-		"test": "vitest run",
-		"lint": "eslint"
-	},
-	"dependencies": {
-		"@fontsource-variable/inter": "^5.2.8",
-		"@tailwindcss/vite": "^4.0.6",
-		"@tanstack/react-router": "^1.132.0",
-		"@tanstack/react-router-ssr-query": "^1.131.7",
-		"@tanstack/react-start": "^1.132.0",
-		"@tanstack/router-plugin": "^1.132.0",
-		"next-themes": "^0.4.6",
-		"nitro": "latest",
-		"react": "^19.2.0",
-		"react-dom": "^19.2.0",
-		"tailwindcss": "^4.0.6",
-		"vite-tsconfig-paths": "^5.1.4"
-	},
-	"devDependencies": {
-		"@tanstack/eslint-config": "^0.3.0",
-		"@types/node": "^22.10.2",
-		"@types/react": "^19.2.0",
-		"@types/react-dom": "^19.2.0",
-		"@vitejs/plugin-react": "^5.0.4",
-		"typescript": "^5.7.2",
-		"vite": "^7.1.7"
-	}
+  "name": "portfolio",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "next": "16.1.1",
+    "next-themes": "^0.4.6",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "1.0.0",
+    "tailwindcss": "^4",
+    "typescript": "^5"
+  },
+  "ignoreScripts": ["sharp", "unrs-resolver"],
+  "trustedDependencies": ["sharp", "unrs-resolver"]
 }
