--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
-	"name": "priyanxhu",
-	"private": true,
-	"scripts": {
-		"build": "turbo run build",
-		"dev": "turbo run dev",
-		"lint": "turbo run lint",
-		"check-types": "turbo run check-types",
-		"biome:check": "biome check --write .",
-		"biome:format": "biome format --write .",
-		"biome:lint": "biome lint ."
-	},
-	"devDependencies": {
-		"@biomejs/biome": "2.3.10",
-		"turbo": "^2.6.3",
-		"typescript": "5.9.2"
-	},
-	"engines": {
-		"node": ">=18"
-	},
-	"packageManager": "bun@1.3.3",
-	"workspaces": [
-		"apps/*"
-	]
+  "name": "portfolio",
+  "private": true,
+  "scripts": {
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "biome check .",
+    "format": "biome check --write .",
+    "check-types": "turbo run check-types"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
+    "turbo": "^2.7.2",
+    "typescript": "5.9.2"
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "packageManager": "bun@1.3.5",
+  "workspaces": ["apps/*"]
 }
