--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "next": "16.1.1",
-    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
@@ -22,6 +21,12 @@
     "tailwindcss": "^4",
     "typescript": "^5"
   },
-  "ignoreScripts": ["sharp", "unrs-resolver"],
-  "trustedDependencies": ["sharp", "unrs-resolver"]
+  "ignoreScripts": [
+    "sharp",
+    "unrs-resolver"
+  ],
+  "trustedDependencies": [
+    "sharp",
+    "unrs-resolver"
+  ]
 }
